DuPont DevSB/src/objects/ccrz__E_PrivateCacheContent__c.object
<CustomObject>
    <description>Child table storing the cache entries for a private cache.</description>
    <fields>
        <fullName>ccrz__CacheContentId__c</fullName>
        <description>External id used for data loads</description>
        <externalId>true</externalId>
        <label>Cache Content Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Content__c</fullName>
        <description>Container contents</description>
        <label>Content</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentCache__c</fullName>
        <label>Parent Cache</label>
        <referenceTo>ccrz__E_PrivateCache__c</referenceTo>
        <relationshipLabel>Cache Contents</relationshipLabel>
        <relationshipName>CacheContents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Container sequence</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CC Private Cache Content</label>
    <nameField>
        <label>CC Private Cache Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Private Cache Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>